mobile adsense image

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -649,7 +649,7 @@
                           <blockquote>
                             <em>Doing business without advertising is like winking at the dark. You know what you are doing, but nobody else does</em><br/><span class='author-right'> – Stuart Britt</span>
                           </blockquote>
-                          <img src = 'img/EventImages/ADSENSE.jpg' class='event-img img-responsive'></img>
+                          <img src = 'img/EventImages/ad.jpg' class='event-img img-responsive'></img>
                           <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'>Advertising is the best way to communicate to the customers. Adsense will test the candidates skill in how well they can advertise a product or a brand by applying the right on-ground execution strategies & marketing concepts. </p>
                           <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE' target='_blank' target='_blank' style='color:black'>Register</a></button>
                           <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/adsense.html' target='_blank' style='color:black'>More Details</a></button>
