chanakyaniti for mobile fixed

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -802,7 +802,7 @@
                           <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'>The 21st century would belong to India and China is an oft-quoted statement but to prove it correct would require innovative and robust strategies formulated as well as executed. ChanakyaNITI provides the platform to enable the young minds of the country to put themselves into the shoes of the policymakers and provide viewpoints on policies like Employment, Cooperative federalism, Security policies, External affairs, Sustainable development, Farm Crisis, Railways to assist the government of the day.</p>
                           <!-- <a href = 'mailto:chanakyaniti@email.iimcal.ac.in'><i class="fa fa-envelope pull-right margin-r-20" style='cursor:pointer' aria-hidden="true"></i></a> -->
                           <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcw/CHANAKYANITI' target='_blank' target='_blank' style='color:black'>Register</a></button>
-                          <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/chanakya.html' target='_blank' style='color:black'>More Details</a></button>
+                          <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/chanakyaniti.html' target='_blank' style='color:black'>More Details</a></button>
                       </div>
                       <h4 class='intag-event-section-h4'>IIMC MUN</h4>
                       <div class='intage-event-section-ul'>
@@ -916,7 +916,7 @@
                           <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'>Quizzical is one of the most addictive and popular mind sports that commands great participation and viewership. Amidst the nail-biting tension and deafening silence, the best minds in the country battle out their wits to answer questions put forth by star quizmasters. The silence only is broken by enthusiastic & cheering crowd. Having been graced by renowned quizmasters like Derek O’ Brien, IIM Calcutta promises to host the quizzing event with full fervour and continue to be one of the most attractive events of Intaglio.</p>
                           <!-- <a href = 'mailto:chanakyaniti@email.iimcal.ac.in'><i class="fa fa-envelope pull-right margin-r-20" style='cursor:pointer' aria-hidden="true"></i></a> -->
                           <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;' onclick="registerEvent()">Register</button>
-                          <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/ngo.html' target='_blank' style='color:black'>More Details</a></button>
+                          <!-- <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/ngo.html' target='_blank' style='color:black'>More Details</a></button> -->
                       </div>
                       <!-- <h4 class='intag-event-section-h4'>Antyodaya</h4>
                       <div class='intage-event-section-ul'>
