register at top for mobile

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -61,6 +61,7 @@
                                 <img class="logo-img logo-img-main" src="img/logo_white.png" alt="IIMC Logo" href = '#'>
                                 <img class="logo-img logo-img-active" src="img/logo.png" alt="IIMC Logo"  href = '#'>
                             </a>
+                            <button class='btn btn-danger btn-sm small-screen' style='margin-left: 7px;margin-top: -22px;'><a id = 'regBtn' target='_blank' style='color:white' href='http://www.quizzinginc.com/index.php?/INTAGLIO-December-2017'>Register/Sign In</a></button>
                         </div>
                         <!-- End Logo -->
                     </div>
@@ -79,7 +80,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#sponsors">Sponsors</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Gallery</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contact</a></li>
-                                <li id = 'regBtn' class="js_nav-item nav-item" style = 'background-color:#ed5a6a; cursor:pointer; padding-right: 15px;'><a class="nav-item-child nav-item-hover" target='_blank' href='http://www.quizzinginc.com/index.php?/INTAGLIO-December-2017'>Register/Sign In</a></li>
+                                <li id = 'regBtn' class="large-screen js_nav-item nav-item" style = 'background-color:#ed5a6a; cursor:pointer; padding-right: 15px;'><a class="nav-item-child nav-item-hover" target='_blank' href='http://www.quizzinginc.com/index.php?/INTAGLIO-December-2017'>Register/Sign In</a></li>
                             </ul>
                         </div>
                     </div>
