--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -61,7 +61,7 @@
                                 <img class="logo-img logo-img-main" src="img/logo_white.png" alt="IIMC Logo" href = '#'>
                                 <img class="logo-img logo-img-active" src="img/logo.png" alt="IIMC Logo"  href = '#'>
                             </a>
-                            <button class='btn btn-danger btn-sm small-screen' style='margin-left: 7px;margin-top: -22px;'><a id = 'regBtn' target='_blank' style='color:white' href='http://www.quizzinginc.com/index.php?/INTAGLIO-December-2017'>Register/Sign In</a></button>
+                            <button class='btn btn-danger btn-sm small-screen' style='position: absolute;top: 20px;left: -5px;'><a id = 'regBtn' target='_blank' style='color:white' href='http://www.quizzinginc.com/index.php?/INTAGLIO-December-2017'>Register/Sign In</a></button>
                         </div>
                         <!-- End Logo -->
                     </div>
