updated olympus rules

--- a/intaglio-v3/HTML/events/olympus.html
+++ b/intaglio-v3/HTML/events/olympus.html
@@ -146,7 +146,7 @@
                   <h4> Rules </h4>
                   <ul>
                     <li>This is an individual event</li>
-                    <li>This event is only open to students from business schools</li>
+                    <li>This event is open to all undergraduate & postgraduate students</li>
                     <li>There is no limit to the number of entries from a college</li>
                     <li>An individual can not register more than once</li>
                     <li>The decisions taken by the organisers are final</li>
