--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -971,7 +971,7 @@
                             <div class='wrapper'>
                               <img class="swiper-clients-img" src="img/speakers/derek.jpg" alt="Clients Logo">
                               <div class='description'>
-                            		<p class='description_content'>Derek O'Brien<br/>MP, Rajya Sachs</p>
+                            		<p class='description_content'>Derek O'Brien<br/>MP, Rajya Sabha</p>
                             	</div>
                             </div>
                         </div>
@@ -1003,7 +1003,7 @@
                             <div class='wrapper'>
                               <img class="swiper-clients-img" src="img/speakers/shivakumar.jpg" alt="Clients Logo">
                               <div class='description'>
-                                <p class='description_content'>D. Shivakumar<br/>CEO, Pepsico</p>
+                                <p class='description_content'>D. Shivakumar<br/>ex-CEO, Pepsico</p>
                               </div>
                             </div>
                         </div>
@@ -1011,7 +1011,7 @@
                             <div class='wrapper'>
                               <img class="swiper-clients-img" src="img/speakers/tvnarendra.jpg" alt="Clients Logo">
                               <div class='description'>
-                                <p class='description_content'>T.V. Narendra<br/>MD, Tata Steel</p>
+                                <p class='description_content'>T.V. Narendran<br/>MD, Tata Steel</p>
                               </div>
                             </div>
                         </div>
