new sponsor image - gamelab

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" class="no-js">
     <!-- BEGIN HEAD -->
     <head>
@@ -1238,6 +1238,9 @@
                       </div>
                       <div class="swiper-slide">
                           <img class="swiper-clients-img" src="img/sponsors/55.jpg" alt="Clients Logo">
+                      </div>
+                      <div class="swiper-slide">
+                          <img class="swiper-clients-img" src="img/sponsors/56.png" alt="Clients Logo">
                       </div>
                   </div>
                   <!-- End Swiper Wrapper -->
