--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1240,7 +1240,7 @@
                           <img class="swiper-clients-img" src="img/sponsors/55.jpg" alt="Clients Logo">
                       </div>
                       <div class="swiper-slide">
-                          <img class="swiper-clients-img" src="img/sponsors/56.png" alt="Clients Logo">
+                          <a href='http://www.gamelabs.com' target='_blank'><img class="swiper-clients-img" src="img/sponsors/56.png" alt="Clients Logo"></a>
                       </div>
                   </div>
                   <!-- End Swiper Wrapper -->
