url edit, title change
changed past sponsors to sponsors, and edited gamelab url

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1067,7 +1067,7 @@
           <div class="content-lg container">
             <div class="row margin-b-40">
                 <div class="col-sm-6">
-                    <h2>PAST SPONSORS</h2>
+                    <h2>SPONSORS</h2>
                 </div>
             </div>
               <!-- Swiper Clients -->
@@ -1240,7 +1240,7 @@
                           <img class="swiper-clients-img" src="img/sponsors/55.jpg" alt="Clients Logo">
                       </div>
                       <div class="swiper-slide">
-                          <a href='http://www.gamelabs.com' target='_blank'><img class="swiper-clients-img" src="img/sponsors/56.png" alt="Clients Logo"></a>
+                          <a href='http://www.gamelabeducation.com' target='_blank'><img class="swiper-clients-img" src="img/sponsors/56.png" alt="Clients Logo"></a>
                       </div>
                   </div>
                   <!-- End Swiper Wrapper -->
