--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1038,9 +1038,39 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="margin-l-20">
-                      Workshop is a focused and in-depth learning technique to understand both theoretical concepts and practical knowledge delivered by the subject matter experts. Discover what makes some people amazingly good at what they do, how greatness is grown and what really separates world-class performers from everybody else. There is so much to take in and grasp in three days!
-                    </div>
+                  <div class="col-xs-6 col-md-4">
+                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  </div>
+                </div>
+                <br
+                <div class="row">
+                  <div class="col-xs-6 col-md-4">
+                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  </div>
                 </div>
             </div>
         </div>
