--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1029,7 +1029,7 @@
         </div>
         <!-- End Speakers -->
 
-        <!--- Workshop--->
+        <!--- Workshop -->
         <div id="workshop" style='margin-top:5px'>
             <div class="content-lg container">
                 <div class="row margin-b-20">
@@ -1038,45 +1038,67 @@
                     </div>
                 </div>
                 <div class="row">
-                  <div class="col-xs-6 col-md-4">
-                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  <div class="col-xs-6 col-md-3 col-border">
+                    <img class = 'workshop_img' src="img/workshop/altnews.jpg" alt="Clients Logo">
+                    <div style='display:flex; justify-content:flex-start'>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002' target='_blank'>Register</a></button>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/altnews.html' target='_blank'>More Details</a></button>
+                    </div>
                   </div>
-                  <div class="col-xs-6 col-md-4">
-                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  <div class="col-xs-6 col-md-3 col-border">
+                    <img class = 'workshop_img' src="img/workshop/icici.jpg" alt="Clients Logo">
+                    <div style='display:flex; justify-content:flex-start'>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/icici.html' target='_blank'>More Details</a></button>
+                    </div>
                   </div>
-                  <div class="col-xs-6 col-md-4">
-                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  <div class="col-xs-6 col-md-3 col-border">
+                    <img class = 'workshop_img' src="img/workshop/kpmg.jpg" alt="Clients Logo">
+                    <div style='display:flex; justify-content:flex-start'>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/kpmg.html' target='_blank'>More Details</a></button>
+                    </div>
                   </div>
                 </div>
-                <br
+                <br/>
                 <div class="row">
-                  <div class="col-xs-6 col-md-4">
-                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  <div class="col-xs-6 col-md-3 col-border">
+                    <img class = 'workshop_img' src="img/workshop/ogilvy.jpg" alt="Clients Logo">
+                    <div style='display:flex; justify-content:flex-start'>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ogl.html' target='_blank'>More Details</a></button>
+                    </div>
                   </div>
-                  <div class="col-xs-6 col-md-4">
-                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  <div class="col-xs-6 col-md-3 col-border">
+                    <img class = 'workshop_img' src="img/workshop/sbi.jpg" alt="Clients Logo">
+                    <div style='display:flex; justify-content:flex-start'>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/sbi.html' target='_blank'>More Details</a></button>
+                    </div>
                   </div>
-                  <div class="col-xs-6 col-md-4">
-                    <img class = 'workshop_img' src="img/workshop/2.png" alt="Clients Logo">
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                    <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ws1.html' target='_blank'>More Details</a></button>
+                  <div class="col-xs-6 col-md-3 col-border">
+                    <img class = 'workshop_img' src="img/workshop/smis.jpg" alt="Clients Logo">
+                    <div style='display:flex; justify-content:flex-start'>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/smis.html' target='_blank'>More Details</a></button>
+                    </div>
+                  </div>
+                </div>
+                <br />
+                <div class='row'>
+                  <div class="col-xs-6 col-md-3 col-border">
+                    <img class = 'workshop_img' src="img/workshop/uber.jpg" alt="Clients Logo">
+                    <div style='display:flex; justify-content:flex-start'>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
+                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/uber.html' target='_blank'>More Details</a></button>
+                    </div>
                   </div>
                 </div>
             </div>
         </div>
-        <!--- End Workshop --->
+        <!--- End Workshop -->
 
-        <!--- Regalio--->
+        <!--- Regalio-->
         <!-- <div id="regalio" style='margin-top:5px' class='alternate-color'>
             <div class="content-lg container">
                 <div class="row margin-b-20">
@@ -1090,7 +1112,7 @@
                 </div>
             </div>
         </div> -->
-        <!--- End Regalio --->
+        <!--- End Regalio -->
 
         <!-- Sponsors -->
         <div id = 'sponsors' style='margin-top:5px'>
