--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1040,21 +1040,21 @@
                 <div class="row">
                   <div class="col-xs-6 col-md-3 col-border">
                     <img class = 'workshop_img' src="img/workshop/altnews.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:flex-start'>
+                    <div style='display:flex; justify-content:center'>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002' target='_blank'>Register</a></button>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/altnews.html' target='_blank'>More Details</a></button>
                     </div>
                   </div>
                   <div class="col-xs-6 col-md-3 col-border">
                     <img class = 'workshop_img' src="img/workshop/icici.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:flex-start'>
+                    <div style='display:flex; justify-content:center'>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/icici.html' target='_blank'>More Details</a></button>
                     </div>
                   </div>
                   <div class="col-xs-6 col-md-3 col-border">
                     <img class = 'workshop_img' src="img/workshop/kpmg.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:flex-start'>
+                    <div style='display:flex; justify-content:center'>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/kpmg.html' target='_blank'>More Details</a></button>
                     </div>
@@ -1064,21 +1064,21 @@
                 <div class="row">
                   <div class="col-xs-6 col-md-3 col-border">
                     <img class = 'workshop_img' src="img/workshop/ogilvy.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:flex-start'>
+                    <div style='display:flex; justify-content:center'>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ogl.html' target='_blank'>More Details</a></button>
                     </div>
                   </div>
                   <div class="col-xs-6 col-md-3 col-border">
                     <img class = 'workshop_img' src="img/workshop/sbi.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:flex-start'>
+                    <div style='display:flex; justify-content:center'>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/sbi.html' target='_blank'>More Details</a></button>
                     </div>
                   </div>
                   <div class="col-xs-6 col-md-3 col-border">
                     <img class = 'workshop_img' src="img/workshop/smis.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:flex-start'>
+                    <div style='display:flex; justify-content:center'>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/smis.html' target='_blank'>More Details</a></button>
                     </div>
