--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1088,7 +1088,7 @@
                 <div class='row'>
                   <div class="col-xs-6 col-md-3 col-border">
                     <img class = 'workshop_img' src="img/workshop/uber.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:flex-start'>
+                    <div style='display:flex; justify-content:center'>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
                       <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/uber.html' target='_blank'>More Details</a></button>
                     </div>
