--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1031,6 +1031,128 @@
 
         <!--- Workshop -->
         <div id="workshop" style='margin-top:5px'>
+            <!-- Contact List -->
+            <div class="content-lg container" style='height: 480px;'>
+                  <div class="row margin-b-40">
+                      <div class="col-sm-6">
+                          <h2>WORKSHOPS</h2>
+                      </div>
+                  </div>
+                  <div class="swiper-slider swiper-clients small-screen">
+                      <!-- Swiper Wrapper -->
+                      <div class="swiper-wrapper">
+                          <div class="swiper-slide">
+                            <div class='wrapper' style='margin-left: 80px'>
+                              <div class='workshop'>
+                                <div class = 'workshop_main'>
+                                  <img class="swiper-clients-img" src="img/workshop/altnews.jpg" alt="Clients Logo">
+                                </div>
+                                <div class='desc-workshop'>
+                                  <div style='font-size:16px;'><b> Debunking Fake News </b></div>
+                                  <div style='font-weight:500'> Speaker : Pratik Sinha </div>
+                                  <div style='font-weight:500'> Date: 16th Dec, 12 PM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/altnews.html' target='_blank'>More Details</a></button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class='wrapper' style='margin-left: 80px'>
+                              <div class='workshop'>
+                                <div class = 'workshop_main'>
+                                  <img class="swiper-clients-img" src="img/workshop/icici.jpg" alt="Clients Logo">
+                                </div>
+                                <div class='desc-workshop'>
+                                  <div style='font-size:16px;'><b> Debunking Fake News </b></div>
+                                  <div style='font-weight:500'> Speaker : Pratik Sinha </div>
+                                  <div style='font-weight:500'> Date: 16th Dec, 12 PM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/icici.html' target='_blank'>More Details</a></button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class='wrapper' style='margin-left: 80px'>
+                              <div class='workshop'>
+                                <div class = 'workshop_main'>
+                                  <img class="swiper-clients-img" src="img/workshop/kpmg.jpg" alt="Clients Logo">
+                                </div>
+                                <div class='desc-workshop'>
+                                  <div style='font-size:16px;'><b> Business Analytics Workshop </b></div>
+                                  <div style='font-weight:500'> Speaker : Vaibhav Agarwal </div>
+                                  <div style='font-weight:500'> Date: 16th December, 3:30 PM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/kpmg.html' target='_blank'>More Details</a></button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class='wrapper' style='margin-left: 80px'>
+                              <div class='workshop'>
+                                <div class = 'workshop_main'>
+                                  <img class="swiper-clients-img" src="img/workshop/ogilvy.jpg" alt="Clients Logo">
+                                </div>
+                                <div class='desc-workshop'>
+                                  <div style='font-size:16px;'><b> How to build a brand </b></div>
+                                  <div style='font-weight:500'> Speaker : Madhukar Sabnavis </div>
+                                  <div style='font-weight:500'> Date: 16th Dec, 9:30 AM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/ogl.html' target='_blank'>More Details</a></button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class='wrapper' style='margin-left: 80px'>
+                              <div class='workshop'>
+                                <div class = 'workshop_main'>
+                                  <img class="swiper-clients-img" src="img/workshop/sbi.jpg" alt="Clients Logo">
+                                </div>
+                                <div class='desc-workshop'>
+                                  <div style='font-size:16px;'><b> Debunking Fake News </b></div>
+                                  <div style='font-weight:500'> Speaker : Pratik Sinha </div>
+                                  <div style='font-weight:500'> Date: 16th Dec, 12 PM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/sbi.html' target='_blank'>More Details</a></button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class='wrapper' style='margin-left: 80px'>
+                              <div class='workshop'>
+                                <div class = 'workshop_main'>
+                                  <img class="swiper-clients-img" src="img/workshop/smis.jpg" alt="Clients Logo">
+                                </div>
+                                <div class='desc-workshop'>
+                                  <div style='font-size:16px;'><b> Virtual Reality in Marketing </b></div>
+                                  <div style='font-weight:500'> Speaker : Chayan Kosambia </div>
+                                  <div style='font-weight:500'> Date: 16th Dec, 5:30 PM </div>
+                                  <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/smis.html' target='_blank'>More Details</a></button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                              <div class='wrapper' style='margin-left: 80px'>
+                                <div class='workshop'>
+                                  <div class = 'workshop_main'>
+                                    <img class="swiper-clients-img" src="img/workshop/uber.jpg" alt="Clients Logo">
+                                  </div>
+                                  <div class='desc-workshop'>
+                                    <div style='font-size:16px;'><b> Operations Management </b></div>
+                                    <div style='font-weight:500'> Speaker : Kamal Ganeriwala, </div>
+                                    <div style='font-weight:500'> Abhimanyu Shirwalkar </div>
+                                    <div style='font-weight:500'> Date: 16th Dec, 2 PM </div>
+                                    <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/uber.html' target='_blank'>More Details</a></button>
+                                  </div>
+                                </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+             </div>
+        </div>
+
+        <!-- <div id="workshop" style='margin-top:5px'>
             <div class="content-lg container">
                 <div class="row margin-b-20">
                     <div class="col-sm-6">
@@ -1095,7 +1217,7 @@
                   </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!--- End Workshop -->
 
         <!--- Regalio-->
