--- a/intaglio-v3/HTML/workshop/kpmg.html
+++ b/intaglio-v3/HTML/workshop/kpmg.html
@@ -66,7 +66,7 @@
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse nav-collapse">
+                    <div ="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
                             <div class='event-title bold' style='width:68%'> Business Analytics Workshop </div>
                             <div id = 'regBtn' class='pull-right' style='border-radius:45px;width:75px'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003'>Register</a></div>
