--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1032,7 +1032,128 @@
         <!--- Workshop -->
         <div id="workshop" style='margin-top:5px'>
             <!-- Contact List -->
-            <div class="content-lg container" style='height: 480px;'>
+            <div class="content-lg container large-screen">
+                  <div class="row margin-b-40">
+                      <div class="col-sm-6">
+                          <h2>WORKSHOPS</h2>
+                      </div>
+                  </div>
+                  <div class="row large-screen">
+                    <div class="col-xs-6 col-md-3 col-border">
+                      <div class='wrapper' style='border: 1px solid #ddd'>
+                        <div class='workshop'>
+                          <div class = 'workshop_main'>
+                            <img src="img/workshop/altnews.jpg" alt="Clients Logo">
+                          </div>
+                          <div class='desc-workshop'>
+                            <div style='font-size:16px;'><b> Debunking Fake News </b></div>
+                            <div style='font-weight:500'> Speaker : Pratik Sinha </div>
+                            <div style='font-weight:500'> Date: 16th Dec, 12 PM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/altnews.html' target='_blank'>More Details</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xs-6 col-md-3 col-border">
+                      <div class='wrapper' style='border: 1px solid #ddd'>
+                        <div class='workshop'>
+                          <div class = 'workshop_main'>
+                            <img src="img/workshop/icici.jpg" alt="Clients Logo">
+                          </div>
+                          <div class='desc-workshop'>
+                            <div style='font-size:16px;'><b> Debunking Fake News </b></div>
+                            <div style='font-weight:500'> Speaker : Pratik Sinha </div>
+                            <div style='font-weight:500'> Date: 16th Dec, 12 PM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/icici.html' target='_blank'>More Details</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xs-6 col-md-3 col-border">
+                      <div class='wrapper' style='border: 1px solid #ddd'>
+                        <div class='workshop'>
+                          <div class = 'workshop_main'>
+                            <img src="img/workshop/kpmg.jpg" alt="Clients Logo">
+                          </div>
+                          <div class='desc-workshop'>
+                            <div style='font-size:16px;'><b> Business Analytics Workshop </b></div>
+                            <div style='font-weight:500'> Speaker : Vaibhav Agarwal </div>
+                            <div style='font-weight:500'> Date: 16th December, 3:30 PM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/kpmg.html' target='_blank'>More Details</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <br/>
+                  <div class="row">
+                    <div class="col-xs-6 col-md-3 col-border">
+                      <div class='wrapper' style='border: 1px solid #ddd'>
+                        <div class='workshop'>
+                          <div class = 'workshop_main'>
+                            <img src="img/workshop/ogilvy.jpg" alt="Clients Logo">
+                          </div>
+                          <div class='desc-workshop'>
+                            <div style='font-size:16px;'><b> How to build a brand </b></div>
+                            <div style='font-weight:500'> Speaker : Madhukar Sabnavis </div>
+                            <div style='font-weight:500'> Date: 16th Dec, 9:30 AM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/ogl.html' target='_blank'>More Details</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xs-6 col-md-3 col-border">
+                      <div class='wrapper' style='border: 1px solid #ddd'>
+                        <div class='workshop'>
+                          <div class = 'workshop_main'>
+                            <img src="img/workshop/sbi.jpg" alt="Clients Logo">
+                          </div>
+                          <div class='desc-workshop'>
+                            <div style='font-size:16px;'><b> Debunking Fake News </b></div>
+                            <div style='font-weight:500'> Speaker : Pratik Sinha </div>
+                            <div style='font-weight:500'> Date: 16th Dec, 12 PM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/sbi.html' target='_blank'>More Details</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xs-6 col-md-3 col-border">
+                      <div class='wrapper' style='border: 1px solid #ddd'>
+                        <div class='workshop'>
+                          <div class = 'workshop_main'>
+                            <img src="img/workshop/smis.jpg" alt="Clients Logo">
+                          </div>
+                          <div class='desc-workshop'>
+                            <div style='font-size:16px;'><b> Virtual Reality in Marketing </b></div>
+                            <div style='font-weight:500'> Speaker : Chayan Kosambia </div>
+                            <div style='font-weight:500'> Date: 16th Dec, 5:30 PM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/smis.html' target='_blank'>More Details</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <br />
+                  <div class='row'>
+                    <div class="col-xs-6 col-md-3 col-border">
+                      <div class='wrapper' style='border: 1px solid #ddd'>
+                        <div class='workshop'>
+                          <div class = 'workshop_main'>
+                            <img src="img/workshop/uber.jpg" alt="Clients Logo">
+                          </div>
+                          <div class='desc-workshop'>
+                            <div style='font-size:16px;'><b> Operations Management </b></div>
+                            <div style='font-weight:500'> Speaker : Kamal Ganeriwala, </div>
+                            <div style='font-weight:500'> Abhimanyu Shirwalkar </div>
+                            <div style='font-weight:500'> Date: 16th Dec, 2 PM </div>
+                            <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/uber.html' target='_blank'>More Details</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="content-lg container small-screen" style='height: 480px;'>
                   <div class="row margin-b-40">
                       <div class="col-sm-6">
                           <h2>WORKSHOPS</h2>
@@ -1042,7 +1163,7 @@
                       <!-- Swiper Wrapper -->
                       <div class="swiper-wrapper">
                           <div class="swiper-slide">
-                            <div class='wrapper' style='margin-left: 80px'>
+                            <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
                               <div class='workshop'>
                                 <div class = 'workshop_main'>
                                   <img class="swiper-clients-img" src="img/workshop/altnews.jpg" alt="Clients Logo">
@@ -1057,7 +1178,7 @@
                             </div>
                           </div>
                           <div class="swiper-slide">
-                            <div class='wrapper' style='margin-left: 80px'>
+                            <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
                               <div class='workshop'>
                                 <div class = 'workshop_main'>
                                   <img class="swiper-clients-img" src="img/workshop/icici.jpg" alt="Clients Logo">
@@ -1072,13 +1193,13 @@
                             </div>
                           </div>
                           <div class="swiper-slide">
-                            <div class='wrapper' style='margin-left: 80px'>
+                            <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
                               <div class='workshop'>
                                 <div class = 'workshop_main'>
                                   <img class="swiper-clients-img" src="img/workshop/kpmg.jpg" alt="Clients Logo">
                                 </div>
                                 <div class='desc-workshop'>
-                                  <div style='font-size:16px;'><b> Business Analytics Workshop </b></div>
+                                  <div style='font-size:16px;'><b> Business Analytics</b></div>
                                   <div style='font-weight:500'> Speaker : Vaibhav Agarwal </div>
                                   <div style='font-weight:500'> Date: 16th December, 3:30 PM </div>
                                   <button class='btn btn-default btn-sm btn-intag btn-intag-det'><a href='workshop/kpmg.html' target='_blank'>More Details</a></button>
@@ -1087,7 +1208,7 @@
                             </div>
                           </div>
                           <div class="swiper-slide">
-                            <div class='wrapper' style='margin-left: 80px'>
+                            <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
                               <div class='workshop'>
                                 <div class = 'workshop_main'>
                                   <img class="swiper-clients-img" src="img/workshop/ogilvy.jpg" alt="Clients Logo">
@@ -1102,7 +1223,7 @@
                             </div>
                           </div>
                           <div class="swiper-slide">
-                            <div class='wrapper' style='margin-left: 80px'>
+                            <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
                               <div class='workshop'>
                                 <div class = 'workshop_main'>
                                   <img class="swiper-clients-img" src="img/workshop/sbi.jpg" alt="Clients Logo">
@@ -1117,7 +1238,7 @@
                             </div>
                           </div>
                           <div class="swiper-slide">
-                            <div class='wrapper' style='margin-left: 80px'>
+                            <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
                               <div class='workshop'>
                                 <div class = 'workshop_main'>
                                   <img class="swiper-clients-img" src="img/workshop/smis.jpg" alt="Clients Logo">
@@ -1132,7 +1253,7 @@
                             </div>
                           </div>
                           <div class="swiper-slide">
-                              <div class='wrapper' style='margin-left: 80px'>
+                              <div class='wrapper' style='position: absolute;left: 22%; border: 1px solid #ddd'>
                                 <div class='workshop'>
                                   <div class = 'workshop_main'>
                                     <img class="swiper-clients-img" src="img/workshop/uber.jpg" alt="Clients Logo">
@@ -1159,63 +1280,7 @@
                         <h2>WORKSHOP</h2>
                     </div>
                 </div>
-                <div class="row">
-                  <div class="col-xs-6 col-md-3 col-border">
-                    <img class = 'workshop_img' src="img/workshop/altnews.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:center'>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/intaglio-workshop-series-dec-2017-020002' target='_blank'>Register</a></button>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/altnews.html' target='_blank'>More Details</a></button>
-                    </div>
-                  </div>
-                  <div class="col-xs-6 col-md-3 col-border">
-                    <img class = 'workshop_img' src="img/workshop/icici.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:center'>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/icici.html' target='_blank'>More Details</a></button>
-                    </div>
-                  </div>
-                  <div class="col-xs-6 col-md-3 col-border">
-                    <img class = 'workshop_img' src="img/workshop/kpmg.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:center'>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/kpmg.html' target='_blank'>More Details</a></button>
-                    </div>
-                  </div>
-                </div>
-                <br/>
-                <div class="row">
-                  <div class="col-xs-6 col-md-3 col-border">
-                    <img class = 'workshop_img' src="img/workshop/ogilvy.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:center'>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/ogl.html' target='_blank'>More Details</a></button>
-                    </div>
-                  </div>
-                  <div class="col-xs-6 col-md-3 col-border">
-                    <img class = 'workshop_img' src="img/workshop/sbi.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:center'>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/sbi.html' target='_blank'>More Details</a></button>
-                    </div>
-                  </div>
-                  <div class="col-xs-6 col-md-3 col-border">
-                    <img class = 'workshop_img' src="img/workshop/smis.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:center'>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/smis.html' target='_blank'>More Details</a></button>
-                    </div>
-                  </div>
-                </div>
-                <br />
-                <div class='row'>
-                  <div class="col-xs-6 col-md-3 col-border">
-                    <img class = 'workshop_img' src="img/workshop/uber.jpg" alt="Clients Logo">
-                    <div style='display:flex; justify-content:flex-start'>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-reg'><a href='https://www.townscript.com/e/iim-calcutta-model-united-nations-30-331003' target='_blank'>Register</a></button>
-                      <button class='btn btn-info btn-sm margin-r-20 btn-intag btn-intag-det'><a href='workshop/uber.html' target='_blank'>More Details</a></button>
-                    </div>
-                  </div>
-                </div>
+
             </div>
         </div> -->
         <!--- End Workshop -->
